Add festive HTML structure for Santa Table Tennis Set

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Santa Table Tennis Set – Serve Up Some Holiday Cheer!</title>
+    <link rel="stylesheet" href="globals.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+</head>
 
+<body>
+    <header class="navbar">
+        <div class="logo">🎅 Santa Ping-Pong</div>
+        <nav>
+            <a href="#concept">Concept</a>
+            <a href="#features">Features</a>
+            <a href="#unique">Why Unique</a>
+            <a href="#buy">Buy</a>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Serve Up Some Holiday Cheer!</h1>
+            <p>The festive table tennis set that brings laughter, play, and Christmas spirit into your home.</p>
+            <button class="cta-btn" onclick="scrollToBuy()">Shop the Set</button>
+        </div>
+        <div class="hero-img"></div>
+    </section>
+
+    <!-- Concept Section -->
+    <section id="concept" class="section fade-in">
+        <h2>The Concept</h2>
+        <p>Our product pairs a table tennis racket with a wall-mounted holder in a clever, Christmas-themed design. 
+        Each racket features Santa’s face, while the holder represents Santa’s beard. When placed together, they form a full, 
+        festive Santa that doubles as wall art and a ready-to-play paddle!</p>
+
+        <div class="concept-img-container">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Table_tennis_racket_and_ball.svg/800px-Table_tennis_racket_and_ball.svg.png" alt="Racket Example">
+            <div class="holder-shape">🧔</div>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="section darker fade-in">
+        <h2>Key Features</h2>
+        <div class="features-grid">
+            <div class="feature-card"> 🎄 Dual-purpose: Decoration + Paddle </div>
+            <div class="feature-card"> 😂 Fun & festive Christmas design </div>
+            <div class="feature-card"> 🔧 Easy to mount & store </div>
+            <div class="feature-card"> 🎁 Perfect gift for all ages </div>
+        </div>
+    </section>
+
+    <!-- Unique Section -->
+    <section id="unique" class="section fade-in">
+        <h2>Why It’s Unique</h2>
+        <p>Unlike standard table tennis accessories, this set combines festive charm with playful functionality. 
+        It's a conversation starter, a Christmas decoration, and a fully usable table tennis set – all in one.</p>
+    </section>
+
+    <!-- Buy Section -->
+    <section id="buy" class="section dark fade-in">
+        <h2>Smash, Hang, & Ho-Ho-Ho!</h2>
+        <p class="tagline">The ultimate Christmas gift for families, friends, and office parties.</p>
+
+        <div class="buy-box">
+            <h3>Santa Table Tennis Set</h3>
+            <p>Only <span class="price">$29.99</span> this holiday season.</p>
+            <button class="cta-btn large">Pre-Order Now</button>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 Santa Ping-Pong – Designed for a college project 🎅</p>
+    </footer>
+
+<script src="scripts.js"></script>
+</body>
+</html>
