--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Santa Table Tennis — Smash, Hang, & Ho‑Ho‑Ho!</title>
+  <title>Santa Table Tennis — Smash, Hang, & Ho-Ho-Ho!</title>
   <meta name="description" content="Santa Table Tennis Set — decorative wall art that doubles as a ready-to-play racket. Perfect Christmas gift and party piece." />
   <link rel="stylesheet" href="globals.css" />
 </head>
@@ -12,7 +12,7 @@
     <div class="container header-grid">
       <div class="brand">
         <h1>Santa Table Tennis</h1>
-        <p class="tagline">Smash, Hang, &amp; Ho‑Ho‑Ho!</p>
+        <p class="tagline">Smash, Hang, &amp; Ho-Ho-Ho!</p>
       </div>
       <nav class="nav" aria-label="Main Navigation">
         <a href="#features">Features</a>
@@ -34,20 +34,18 @@
             <a href="#buy" class="btn btn-outline">Preorder now</a>
           </div>
 
-          <ul class="feature-list" aria-hidden="false">
+          <ul class="feature-list">
             <li>Dual-purpose design: wall art + playable racket</li>
             <li>Festive, conversation-starting silhouette</li>
             <li>Quick wall mount with magnetic or hook option</li>
           </ul>
         </div>
 
-        <div class="hero-visual" aria-hidden="true">
+        <div class="hero-visual">
           <div class="wall">
-            <div id="holder" class="holder" tabindex="0" aria-label="Santa beard holder" title="Drop the racket here to hang">
-              <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='280' height='220'><rect width='100%' height='100%' fill='%23fff'/></svg>" alt=""/>
-            </div>
+            <div id="holder" class="holder" tabindex="0" title="Drop the racket here to hang"></div>
 
-            <div id="racket" class="racket" draggable="true" role="img" aria-label="Santa racket - drag to hang">
+            <div id="racket" class="racket" draggable="true">
               <div class="racket-face">
                 <span class="eyes">◕ ◕</span>
                 <span class="nose">●</span>
@@ -55,7 +53,7 @@
               </div>
             </div>
 
-            <div class="sparkles" aria-hidden="true"></div>
+            <div class="sparkles"></div>
           </div>
         </div>
       </div>
@@ -84,13 +82,14 @@
       <p>Drag the racket onto the Santa beard holder (or use the keyboard) to complete the image and hear Santa's jolly chime.</p>
 
       <div class="demo-area">
-        <div class="instructions" id="announce" aria-live="polite">Ready — drag the racket or press <kbd>Enter</kbd> while the holder is focused.</div>
+        <div class="instructions" id="announce" aria-live="polite">Ready — drag the racket or press Enter.</div>
+
         <div class="stage">
-          <div id="demo-holder" class="demo-holder" tabindex="0" aria-label="Demo holder for racket">
+          <div id="demo-holder" class="demo-holder" tabindex="0">
             <div class="beard">Santa's Beard</div>
           </div>
 
-          <div id="demo-racket" class="demo-racket" draggable="true" role="button" aria-pressed="false" aria-label="Demo racket, draggable">
+          <div id="demo-racket" class="demo-racket" draggable="true">
             <div class="face">🎅</div>
           </div>
         </div>
@@ -105,17 +104,18 @@
 
     <section id="gallery" class="gallery container">
       <h3>Gallery</h3>
-      <div class="gallery-grid" role="list">
-        <figure role="listitem"><img src="https://images.unsplash.com/photo-1544213456-b5f2f1d9f5c4?q=80&w=800&auto=format&fit=crop" alt="Holiday party with ping pong"/><figcaption>At-home holiday ping-pong fun.</figcaption></figure>
-        <figure role="listitem"><img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=800&auto=format&fit=crop" alt="Decorative racket on wall"/><figcaption>Neat storage that decorates.</figcaption></figure>
-        <figure role="listitem"><img src="https://images.unsplash.com/photo-1545177962-2bb3e5b1f2bd?q=80&w=800&auto=format&fit=crop" alt="Close-up of racket face"/><figcaption>Play-ready, premium rubber surface.</figcaption></figure>
+      <div class="gallery-grid">
+        <figure><img src="https://images.unsplash.com/photo-1544213456-b5f2f1d9f5c4?q=80&w=800&auto=format&fit=crop"><figcaption>Holiday ping-pong fun.</figcaption></figure>
+        <figure><img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?q=80&w=800&auto=format&fit=crop"><figcaption>Decorative wall display.</figcaption></figure>
+        <figure><img src="https://images.unsplash.com/photo-1545177962-2bb3e5b1f2bd?q=80&w=800&auto=format&fit=crop"><figcaption>Premium surface textures.</figcaption></figure>
       </div>
     </section>
 
     <section id="buy" class="container buy">
       <h3>Where to get one</h3>
       <p>For this college demo we show a preorder flow. Replace with your store details when ready.</p>
-      <form id="preorder" class="preorder" aria-label="Preorder form">
+
+      <form id="preorder" class="preorder">
         <div class="form-row">
           <label for="name">Full name</label>
           <input id="name" name="name" required />
@@ -132,18 +132,13 @@
           <button class="btn" type="submit">Preorder — Limited Run</button>
           <button id="demoPurchase" class="btn btn-outline" type="button">Simulate Purchase</button>
         </div>
-        <p class="fine-print">By preordering you agree to the student demo terms. No payment processed.</p>
       </form>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
-      <p>© Santa Table Tennis — College Project • Built with ❤️ for holiday cheer</p>
-      <div class="foot-links">
-        <a href="#">Privacy</a>
-        <a href="#">Design Notes</a>
-      </div>
+      <p>© Santa Table Tennis — College Project</p>
     </div>
   </footer>
 
